# osqp

./: DESCRIPTION  MD5
inst/doc/: osqp.R  osqp.html
src/osqp_sources/configure/cmake/: FindR.cmake
src/osqp_sources/examples/: osqp_simple_demo.c
src/osqp_sources/src/: profilers.c  profilers_impl.c  profilers_itt.c  profilers_nvtx.c  profilers_omnitrace.c  profilers_roctx.c  profilers_terminal.c
src/osqp_sources/tests/: CMakeLists.txt  osqp_tester.cpp
src/osqp_sources/tests/basic_qp/: data.h
src/osqp_sources/tests/basic_qp2/: data.h
src/osqp_sources/tests/lin_alg/: data.h
src/osqp_sources/tests/non_cvx/: data.h
src/osqp_sources/tests/primal_dual_infeasibility/: data.h
src/osqp_sources/tests/primal_infeasibility/: data.h
src/osqp_sources/tests/solve_linsys/: data.h
src/osqp_sources/tests/unconstrained/: data.h
src/osqp_sources/tests/update_matrices/: data.h
