# Add subdirectories of all the tests
add_subdirectory(basic_qp)
add_subdirectory(basic_qp2)
add_subdirectory(lin_alg)
add_subdirectory(non_cvx)
add_subdirectory(primal_dual_infeasibility)
add_subdirectory(primal_infeasibility)
add_subdirectory(solve_linsys)
add_subdirectory(unconstrained)
add_subdirectory(update_matrices)
include_directories(/usr/local/Cellar/r/4.2.1_4/lib/R/include /usr/local/lib/R/4.2/site-library/Rcpp/include /usr/local/lib/R/4.2/site-library/RInside/include)
link_directories(/usr/local/Cellar/r/4.2.1_4/lib/R/lib /usr/local/lib/R/4.2/site-library/RInside/lib)
target_link_libraries(osqp_tester R RInside)
set(test_headers ${headers} PARENT_SCOPE)
set(codegen_test_headers ${codegen_headers} PARENT_SCOPE)
